--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
     "i18next": "^24.2.1",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.503.0",
     "motion": "^11.15.0",
     "next": "^15.5.6",
