--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lru-cache": "^11.2.4",
     "lucide-react": "^0.503.0",
     "motion": "^11.15.0",
-    "next": "^15.5.6",
+    "next": "15.5.9",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
